cmake_minimum_required(VERSION 2.4)
project(hwtrycatch)
file(GLOB SOURCE_FILES "src/*.c" "src/*.cpp")
file(GLOB HEADER_FILES "inc/*.h")
source_group("Header files" FILES ${HEADER_FILES})
include_directories("inc")
include_directories("googletest/googletest")
include_directories("googletest/googlemock")
include_directories("googletest/googletest/include")
include_directories("googletest/googlemock/include")
find_package(Threads)
add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()
if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
endif()
