cmake_minimum_required(VERSION 3.2)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_STANDARD 11)
project(hwtrycatch)
file(GLOB SOURCE_FILES "src/*.c" "src/*.cpp")
file(GLOB HEADER_FILES "inc/*.h")
list(REMOVE_ITEM SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/tests.cpp)
source_group("Header files" FILES ${HEADER_FILES})
include_directories("inc")
include_directories("googletest/googletest")
include_directories("googletest/googlemock")
include_directories("googletest/googletest/include")
include_directories("googletest/googlemock/include")
find_package(Threads)
add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
add_executable(${PROJECT_NAME}_tests "src/tests.cpp")
target_link_libraries(${PROJECT_NAME}_tests ${CMAKE_THREAD_LIBS_INIT} ${PROJECT_NAME})
